--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 			<p>Enter all known values into their respective spots on the grid, and then press the "Solve" button for the full solution.</p>
 		</div>
 
-		<div class="grid"></div>		
+		<button>Solve</button>
+
+		<div class="grid"></div>
 	</div>
 
 	<script src="scripts/grid.js"></script>
