Page is now fully functional

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 			<p>Enter all known values into their respective spots on the grid, and then press the "Solve" button for the full solution.</p>
 		</div>
 
-		<button>Solve</button>
+		<button id="solve-button">Solve</button>
 
 		<div class="grid"></div>
 	</div>
 
 	<script src="scripts/grid.js"></script>
+	<script src="scripts/browserified.js"></script>
 </body>
 </html>
