--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 		<div class="header">
 			<h1>Sudoku Solver</h1>
 			<h3>Instructions:</h3>
-			<p>Enter all known values into their respective spots on the grid, and then press the "Solve" button for the full solution.</p>
+			<p>Enter all known values into their respective spots on the grid, and then press the "Solve" button for the full solution. Keep in mind that some puzzles may have multiple solutions.</p>
 		</div>
 
-		<button id="solve-button">Solve</button>
+		<div class="buttons">
+			<button id="solve-button">Solve</button>
+			<button id="reset-button">Reset</button>
+		</div>
 
 		<div class="grid"></div>
 	</div>
