Refactored code to be more readable

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 	</div>
 
 	<script src="scripts/grid.js"></script>
-	<script src="scripts/browserified.js"></script>
+	<script src="scripts/browserifiedMain.js"></script>
 </body>
 </html>
