Reworked the input error message

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		</div>
 
 		<div class="buttons">
+			<p>Make sure your input is correct!</p>
 			<button id="solve-button">Solve</button>
 			<button id="reset-button">Reset</button>
 		</div>
