--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -24,7 +24,7 @@
 		<div class="grid"></div>
 	</div>
 
-	<script src="scripts/browserify/browserifiedGrid.js"></script>
+	<script src="scripts/grid.js"></script>
 	<script src="scripts/browserify/browserifiedMain.js"></script>
 </body>
 </html>
